# Lecture-Template

./: Makefile  README.md  pyproject.toml
common/: __init__.py  config.py  dataio.py  utils.py  visualization.py
docs/: index.md
lectures/01-intro-ml/: README.md  requirements.txt
lectures/01-intro-ml/exercises/uebung01/notebooks/: 1.0-uebung01-starter.ipynb
lectures/01-intro-ml/exercises/uebung01/uebung01/: dataset.py  features.py
lectures/01-intro-ml/lecture_code/: features.py
lectures/01-intro-ml/lecture_code/modeling/: train.py
lectures/01-intro-ml/notebooks/: 1.0-intro-overview.py
scripts/: new_exercise.py  new_lecture.py
